# mocha-chat

./: .gitignore  README.md  nginx.conf
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt  run.py
backend/app/: main.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/blog/: blog.py
backend/app/api/v1/endpoints/tools/: sql_tutor.py
backend/app/config/: base_prompts.yaml  blog_rag_prompts.yaml  sql_tutor_prompts.yaml
backend/app/core/: config.py  groq_client.py
backend/app/schemas/: blog.py  ret_result.py  sql_tutor.py
backend/app/services/: rag_service.py
backend/app/utils/: error_handler.py  json_utils.py  prompt_loader.py
docs/: api_docs.md  installation_db.md  setup.md
redirect_app/: Dockerfile  app.py  check_cert.sh  docker-compose.yml  generate_cert.sh  gunicorn_conf.py  renew_cert.sh  requirements.txt  start.sh
