[project]
name = "backend"
version = "0.1.0"
description = "mochachat-app"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=1.3.5",
    "fastapi>=0.121.3",
    "groq>=0.36.0",
    "langchain>=1.0.8",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.0.1",
    "langchain-huggingface>=1.0.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.20",
    "pyyaml>=6.0.3",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.38.0",
]
